--- a/drink.html
+++ b/drink.html
@@ -15,8 +15,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/drink.css" />
+        <link rel="stylesheet" href="./assets/CSS/style.css" />
+        <link rel="stylesheet" href="./assets/CSS/drink.css" />
         <title>Craving Finder</title>
     </head>
 
@@ -63,6 +63,6 @@
             <p>&copy;Craving Finder 2022. Thanks For Visiting!</p>
           </footer>
           <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-          <script src="./assets/js/script.js"></script>
+          <script src="./assets/JS/script.js"></script>
           </body>
 </html>
